feature/CMS-32 ui components v2 pr review